--- a/pom.xml
+++ b/pom.xml
@@ -4,14 +4,14 @@
     <artifactId>bitpesa-sdk-java7</artifactId>
     <packaging>jar</packaging>
     <name>bitpesa-sdk-java7</name>
-    <version>0.1.0-SNAPSHOT</version>
+    <version>0.1.0</version>
     <url>https://github.com/bitpesa/bitpesa-sdk-java7</url>
     <description>Java 7 library for the BitPesa API</description>
     <scm>
         <connection>scm:git:https://github.com/bitpesa/bitpesa-sdk-java7.git</connection>
         <developerConnection>scm:git:git@github.com:bitpesa/bitpesa-sdk-java7.git</developerConnection>
         <url>https://github.com/bitpesa/bitpesa-sdk-java7</url>
-      <tag>HEAD</tag>
+      <tag>bitpesa-sdk-java7-0.1.0</tag>
   </scm>
 
     <licenses>
