--- a/build.gradle
+++ b/build.gradle
@@ -3,7 +3,7 @@ apply plugin: 'eclipse'
 apply plugin: 'java'
 
 group = 'co.bitpesa.sdk'
-version = '0.2.0'
+version = '0.2.1-SNAPSHOT'
 
 buildscript {
     repositories {
